# pco.sdk-samples

./: CMakeLists.txt  CMakePresets.json  README.md
src/lnx/grab_while_camera_running/: CMakeLists.txt  Grab_AddBufferEx.cpp  Grab_AddBufferExtern.cpp  Grab_GetImageEx.cpp
src/lnx/read_from_camera_camram/: CMakeLists.txt  Read_AddBufferEx.cpp  Read_AddBufferExtern.cpp  Read_GetImageEx.cpp
src/lnx/simple_open/: CMakeLists.txt  pco_cam_getversions.cpp  pco_cam_open.cpp  pco_cam_openex.cpp
src/win/console/: AddBufferExt_CamRun.cpp  AddBuffer_CamRecorder.cpp  AddBuffer_CamRun.cpp  CMakeLists.txt  GetImage_CamRecorder.cpp  GetImage_CamRun.cpp  file12.cpp  file12.h
src/win/sc2_demo/: CMakeLists.txt  MainFrm.cpp  SC2_Class.cpp  SC2_Class.h
src/win/test_cvdlg/: CMakeLists.txt  ChildView.cpp  ChildView.h  FILE12.H  File12.cpp  MainFrm.cpp  MainFrm.h  PCO_cDlg.h  Test_cvDlg.cpp  Test_cvDlg.h  Test_cvDlg.rc  resource.h  stdafx.cpp  stdafx.h
src/win/test_cvdlg/res/: Test_cvDlg.manifest  Test_cvDlg.rc2  Test_cvDlg32.manifest
